--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,14 +1,14 @@
 
-# #+header: :tangle ~/dotfiles/.tmux.conf
+# #+header: :tangle ~/dotfiles/.config/tmux/tmux.conf
 # #+header: :noweb yes
 # #+header: :comments both
 
-# [[file:../org/dots/dot.tmux.org::*.tmux.conf][.tmux.conf:1]]
+# [[file:../../../org/dots/dot_tmux_conf.org::*.tmux.conf][.tmux.conf:1]]
 unbind C-b
 set-option -g prefix M-\\
 # bind -N "Send the prefix key through to the application" \
 #   M-\\ send-prefix
-bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
+bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded"
 bind-key b set-option -g status
 # set-option -g status-position top
 set-option -g status-position bottom
@@ -93,5 +93,5 @@ set -g @plugin 'ofirgall/tmux-browser'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
 # .tmux.conf:1 ends here
