--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,9 +1,9 @@
 
-# #+header: :tangle ~/dotfiles/.config/tmux/tmux.conf
+# #+header: :tangle ~/.config/tmux/tmux.conf
 # #+header: :noweb yes
 # #+header: :comments both
 
-# [[file:../../../org/dots/dot_tmux_conf.org::*.tmux.conf][.tmux.conf:1]]
+# [[file:../../org/dots/dot_tmux.org::*.tmux.conf][.tmux.conf:1]]
 unbind C-b
 set-option -g prefix M-\\
 # bind -N "Send the prefix key through to the application" \
@@ -16,7 +16,7 @@ set-option -g mouse on
 # set-option -g window-status-current-style bg=red
 # set-option -a terminal-overrides ",alacritty:RGB"
 
-# set-window-option -g mode-keys vi
+# set-option -g mode-keys vi
 
 # https://emacs.stackexchange.com/a/29410
 # set-option -g default-terminal "xterm-256color"
