--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -57,10 +57,14 @@ GREEN="colour76"
 WHITE="colour231"
 
 # set active/pasive pane background colours
-set -g window-style fg=default
-set -g window-style bg=$GREY
-set -g window-active-style fg=default
-set -g window-active-style bg=$BLACK
+set -g window-style fg=$BLACK
+set -g window-style bg=default
+set -g window-active-style fg=$BLACK
+set -g window-active-style bg=default
+# set -g window-style fg=default
+# set -g window-style bg=$GREY
+# set -g window-active-style fg=default
+# set -g window-active-style bg=$BLACK
 
 # set-option -g status-justify "centre"
 # set-option -g status-left-length 60
