--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -10,8 +10,8 @@ set-option -g prefix M-\\
 #   M-\\ send-prefix
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded"
 bind-key b set-option -g status
-# set-option -g status-position top
-set-option -g status-position bottom
+set-option -g status-position top
+# set-option -g status-position bottom
 set-option -g mouse on
 # set-option -g window-status-current-style bg=red
 # set-option -a terminal-overrides ",alacritty:RGB"
